--- a/src/main/resources/templates/azienda/indexAzienda.html
+++ b/src/main/resources/templates/azienda/indexAzienda.html
@@ -35,7 +35,7 @@
     </section>
 
     <section class="quadrant" id="quadrant3">
-        <a href="link3" class="image-link">
+        <a href="/azienda/bacheca" class="image-link">
             <span class="image-text">Bacheca</span>
         </a>
     </section>
