--- a/src/main/resources/templates/azienda/profiloAzienda.html
+++ b/src/main/resources/templates/azienda/profiloAzienda.html
@@ -5,7 +5,14 @@
 <link rel="stylesheet" href="/css/stilePiatto.css" />
 </head>
 <body>
-
+	<header> 
+		<div class="header-links">
+            <a href="paginaAziende">Modifica</a>
+            <a href="/azienda/sezioneOfferteLavoro">Sezione offerte di lavoro</a>
+            <a href="/login">Login</a>
+        </div>
+	
+	</header>
   
       <h1  th:text="${azienda.nome}">nome azienda</h1>
       
