--- a/src/main/resources/templates/azienda/indexAzienda.html
+++ b/src/main/resources/templates/azienda/indexAzienda.html
@@ -29,7 +29,7 @@
     </section>
 
     <section class="quadrant" id="quadrant2">
-        <a href="link2" class="image-link">
+        <a href="/studente/paginaStudenti" class="image-link">
             <span class="image-text">Studenti</span>
         </a>
     </section>
