--- a/src/main/resources/templates/studente/paginaStudenti.html
+++ b/src/main/resources/templates/studente/paginaStudenti.html
@@ -24,15 +24,15 @@
 	 <div class="main-container">
 	 <div class="container">
         <div class="main-section section1">
-            <a th:href="@{'/studente' + '/' + ${s2.id}}" th:text="${s2.nome} ">Up!
+            <a th:href="@{'/studente/studente' + '/' + ${s2.id}}" th:text="${s2.nome} ">Up!
             <img src="/immagini/Glamour.jpeg" alt="Descrizione della foto">
         </div>
         <div class="main-section section2">
-           <a th:href="@{'/studente' + '/' + ${s3.id}}" th:text="${s3.nome} ">Up!
+           <a th:href="@{'/studente/studente' + '/' + ${s3.id}}" th:text="${s3.nome} ">Up!
            <img src="/immagini/Glamour.jpeg" alt="Descrizione della foto">
         </div>
         <div class="main-section section3">
-       <a th:href="@{'/sstudente' + '/' + ${s1.id}}" th:text="${s1.nome} ">Up!
+       <a th:href="@{'/studente/studente' + '/' + ${s1.id}}" th:text="${s1.nome} ">Up!
        <img src="/immagini/Glamour.jpeg" alt="Descrizione della foto">
         </div>
     </div>
