--- a/src/main/resources/templates/studente/bacheca.html
+++ b/src/main/resources/templates/studente/bacheca.html
@@ -22,15 +22,16 @@
 	
 	<h1>Offerte di Lavoro</h1>
 	 
-	<div th:if="${offerteLavoro==null || offerteLavoro.isEmpty()}">Non ci sono offerte di lavoro nel sistema</div>
+	<div th:if="${pubblicate==null || pubblicate.isEmpty()}">Non ci sono offerte di lavoro  nel sistema</div>
 	
-		<div th:each="offerta : ${offerteLavoro}">
+		<div th:each="offerta : ${pubblicate}">
+		a
 			<a th:href="@{'/azienda/offertaLavoro' + '/' + ${offerta.id}}" th:text="${offerta.id} ">Up!
 				(2000)</a>
 		
-		<a th:href="@{'/azienda/modificaOffertaLavoro/' + ${offerta.id}+ '/' + ${azienda.id}}" class="btn btn-primary">Cancella</a>
+		
 			</div>
-		<a href="/azienda/aggiungiOffertaLavoro">Nuova Offerta</a>
+	
 	
 	
 	
