commit v8:aggiunto css

--- a/src/main/resources/templates/azienda/formCreaAzienda.html
+++ b/src/main/resources/templates/azienda/formCreaAzienda.html
@@ -2,51 +2,51 @@
 <html>
 
 <head>
-	<title>
-		Nuova Azienda
-	</title>
-	<link rel="stylesheet" href="/css/stile.css" />
+    <title>Nuova Azienda</title>
+    <link rel="stylesheet" href="/css/az.css">
 </head>
 
 <body>
-	
-	
-	<h1>Aggiungi Aziend</h1>
-	<form th:action="@{/azienda/formCreaAzienda}" method="POST" th:object="${azienda}">
-	
-  		<div th:if="${#fields.hasGlobalErrors()}">
-  			<p th:each="err : ${#fields.globalErrors()}" th:text="${err}">...</p> 
-  		</div>
-		
-		<div>
-			<label>Nome:</label> 
-			<span><input type="text" th:field="${azienda.nome}" /></span>
-		    <span th:if="${#fields.hasErrors('nome')}" th:errors="*{nome}">
-		    </span>
-		</div>
+    <h1>Aggiungi Azienda</h1>
+    <form th:action="@{/azienda/formCreaAzienda}" method="POST" th:object="${azienda}">
+        <div th:if="${#fields.hasGlobalErrors()}">
+            <p th:each="err : ${#fields.globalErrors()}" th:text="${err}">...</p>
+        </div>
 
-		<div>
-			<label>indirizzo:</label> <span><input type="text" th:field="${azienda.indirizzo}" /></span>
-		    <span th:if="${#fields.hasErrors('indirizzo')}" th:errors="*{indirizzo}">
-		    </span>
-		</div>
+        <div class="form-group">
+            <label>Nome:</label>
+            <span><input type="text" th:field="${azienda.nome}"></span>
+            <span th:if="${#fields.hasErrors('nome')}" th:errors="*{nome}"></span>
+        </div>
 
-		<div>
-			<label>Telefono:</label> <span><input type="text" th:field="${azienda.telefono}" /></span>
-			<span th:if="${#fields.hasErrors('telefono')}" th:errors="*{telefono}">
-		</div>
-		<div>
-			<label>Email:</label> <span><input type="text" th:field="${azienda.email}" /></span>
-			<span th:if="${#fields.hasErrors('email')}" th:errors="*{email}">
-		</div>
-		<div>
-			<label>Immagine:</label> <span><input type="text" th:field="${azienda.immagine}" /></span>
-			<span th:if="${#fields.hasErrors('immagine')}" th:errors="*{immagine}">
-		</div>
-		<div>
-			<span><button type="submit">Conferma</button></span>
-		</div>
-	</form>
+        <div class="form-group">
+            <label>Indirizzo:</label>
+            <span><input type="text" th:field="${azienda.indirizzo}"></span>
+            <span th:if="${#fields.hasErrors('indirizzo')}" th:errors="*{indirizzo}"></span>
+        </div>
+
+        <div class="form-group">
+            <label>Telefono:</label>
+            <span><input type="text" th:field="${azienda.telefono}"></span>
+            <span th:if="${#fields.hasErrors('telefono')}" th:errors="*{telefono}"></span>
+        </div>
+
+        <div class="form-group">
+            <label>Email:</label>
+            <span><input type="text" th:field="${azienda.email}"></span>
+            <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
+        </div>
+
+        <div class="form-group">
+            <label>Immagine:</label>
+            <span><input type="text" th:field="${azienda.immagine}"></span>
+            <span th:if="${#fields.hasErrors('immagine')}" th:errors="*{immagine}"></span>
+        </div>
+
+        <div class="form-group">
+            <span><button type="submit">Conferma</button></span>
+        </div>
+    </form>
 </body>
 
 </html>
