--- a/src/main/resources/templates/formRegistrazione.html
+++ b/src/main/resources/templates/formRegistrazione.html
@@ -44,6 +44,7 @@
 			</span>
 			</span>
 			<label>Sei un'azienda?</label>
+			<!--
 <div>
     <span>
         <input type="radio" id="aziendaSi" required th:field="${user.sonoazienda}" th:value="true" />
@@ -53,7 +54,7 @@
         <input type="radio" id="aziendaNo" th:field="${user.sonoazienda}" th:value="false" />
         <label for="aziendaNo">No</label>
     </span>
-</div>
+</div>-->
             
 			<span><button type="submit">Conferma</button></span>
 		</div>
