--- a/src/main/resources/templates/studente/formModificaProfilo.html
+++ b/src/main/resources/templates/studente/formModificaProfilo.html
@@ -5,7 +5,7 @@
 	<title>
 		Nuova Azienda
 	</title>
-	<link rel="stylesheet" href="/css/stile.css" />
+	<link rel="stylesheet" href="/css/stud.css" />
 </head>
 
 <body>
@@ -31,7 +31,7 @@
 		    </span>
 		</div>
 
-		
+		<div>
 			<a>Anno:</a> <span><input type="text" name="nuovoAnno" placeholder="Nuovo anno" th:value="${studente.year}" /></span>
 		    
 		    </span>
