--- a/src/main/resources/templates/studente/profiloStudente.html
+++ b/src/main/resources/templates/studente/profiloStudente.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Azienda</title>
-<link rel="stylesheet" href="/css/paginaStudenti.css" />
+<link rel="stylesheet" href="/css/stud.css" />
 </head>
 <body>
 	<header> 
