--- a/src/main/resources/templates/studente/formCreaStudente.html
+++ b/src/main/resources/templates/studente/formCreaStudente.html
@@ -5,7 +5,7 @@
 	<title>
 		Nuova Azienda
 	</title>
-	<link rel="stylesheet" href="/css/stile.css" />
+<link rel="stylesheet" href="/css/stud.css" />
 </head>
 
 <body>
